--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,10 @@ android {
 
 dependencies {
 
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
