--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
 
+    implementation "io.coil-kt:coil:1.1.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
