--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Gallery"
         tools:targetApi="31">
         <activity
+            android:name=".DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GalleryFragment"
+            android:exported="false" />
+        <activity
             android:name=".ProfileFragment"
             android:exported="false" />
         <activity
